<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.jans</groupId>
	<artifactId>jans-core-parent</artifactId>
	<packaging>pom</packaging>
	<version>1.1.1</version>
	<name>jans-core</name>

    <distributionManagement>
	  <repository>
          <id>github</id>
          <name>GitHub Packages</name>
          <url>https://maven.pkg.github.com/JanssenProject/jans</url>
      </repository>
    </distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<maven.min-version>3.0.3</maven.min-version>

		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<jans.bom.version>${project.version}</jans.bom.version>

		<jacoco.version>0.8.10</jacoco.version>
		
		<sonar.projectKey>JanssenProject_jans-core</sonar.projectKey>
		<sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
		<sonar.organization>janssenproject</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<scm>
		<url>https://github.com/JanssenProject/jans</url>
		<connection>scm:git:git://github.com/JanssenProject/jans.git</connection>
		<developerConnection>scm:git:git@github.com:JanssenProject/jans.git</developerConnection>
	</scm>

	<prerequisites>
		<maven>${maven.min-version}</maven>
	</prerequisites>

	<modules>
		<module>util</module>
		<module>model</module>
		<module>cache</module>
		<module>message</module>
		<module>document-store</module>
		<module>standalone</module>
		<module>saml</module>
		<module>jsf-util</module>
		<module>java-ext</module>
		<module>cdi</module>
		<module>timer-weld</module>
		<module>security-extension-cdi</module>
		<module>exception-extension-cdi</module>
		<module>script</module>
		<module>service</module>
		<module>server</module>
		<module>radius</module>
		<module>demo-cdi</module>
		<module>doc</module>
		<module>uma-rs-core</module>
		<module>notify-client</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.jans</groupId>
				<artifactId>jans-bom</artifactId>
				<version>${jans.bom.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.3.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
					<executions>
						<execution>
							<goals>
								<goal>test-jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.1</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>4.0.0-M7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>4.7.3.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.0.0</version>
					<configuration>
						<configLocation>checkstyle.xml</configLocation>
						<encoding>UTF-8</encoding>
						<consoleOutput>true</consoleOutput>
						<failsOnError>false</failsOnError>
						<linkXRef>false</linkXRef>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<configuration>
						<failOnError>false</failOnError>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>checkstyle</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

    <repositories>
        <repository>
            <id>mavencentral</id>
            <name>maven central</name>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
        <repository>
            <id>bouncycastle</id>
            <name>Bouncy Castle</name>
            <url>https://repo1.maven.org/maven2/org/bouncycastle</url>
        </repository>
        <repository>
            <id>jans</id>
            <name>Janssen project repository</name>
            <url>https://maven.jans.io/maven</url>
        </repository>
        <repository>
            <id>mulesoft</id>
            <name>mulesoft</name>
            <url>https://repository.mulesoft.org/nexus/content/repositories/releases</url>
        </repository>
    </repositories>
</project>